# MoroccoTourismAgent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: __init__.py
app/evaluation/: __init__.py  evaluator.py  questions.py
app/graph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
app/llm/: __init__.py  model.py
app/memory/: __init__.py  memory.py
app/rag/: __init__.py  embeddings.py  loader.py  retriever.py  splitter.py  vectordb.py
app/tools/: __init__.py  budget_tool.py  comparison_tool.py  itinerary_tool.py  retrieval_tool.py  transport_tool.py  validators.py
app/utils/: __init__.py  config.py  logger.py
artifacts/: evaluation_results.csv  evaluation_results.json  evaluation_summary.json  tourism_agent_graph.mmd
scripts/: __init__.py  export_graph.py  index_documents.py  list_gemini_models.py  run_evaluation.py  test_graph.py  test_llm.py  test_memory.py  test_retrieval.py  test_routing.py  test_tools.py
tests/: __init__.py  test_graph_nodes.py  test_rag_foundation.py
