[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "morocco-tourism-agent"
version = "0.1.0"
description = "An agentic RAG tourism assistant for Morocco."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "author@example.com" },
]

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
